@@ -13,6 +13,7 @@
   -->
   <ExpressionsToBlock>
     <Groups>
+      
       <!-- This group will block audit failures from failed login attempts to Windows -->
       <Group>
         <Keywords>0x8010000000000000</Keywords>
@@ -27,7 +28,8 @@
           </Expression>
         </Expressions>
       </Group>
-      <!-- This group will block audit failures from failed login attempts to MSSQLSERVER -->
+      
+      <!-- This group will block audit failures from failed login attempts to Microsoft SQL Server -->
       <Group>
         <Keywords>0x90000000000000</Keywords>
         <Path>Application</Path>
@@ -38,14 +40,33 @@
           </Expression>
           <Expression>
             <XPath>//Data</XPath>
-            <Regex>
-              <![CDATA[
+            <Regex><![CDATA[
               \[Client: ?(?<ipaddress>.*?)\]
             ]]>
             </Regex>
           </Expression>
         </Expressions>
       </Group>
+
+      <!-- This group will block audit failures from failed login attempts to MySQL Server -->
+      <Group>
+        <Keywords>0x80000000000000</Keywords>
+        <Path>Application</Path>
+        <Expressions>
+          <Expression>
+            <XPath>//Provider[@Name='MySQL']</XPath>
+            <Regex></Regex>
+          </Expression>
+          <Expression>
+            <XPath>//Data</XPath>
+            <Regex><![CDATA[
+              Access denied for user .*?'@'(?<ipaddress>.*?)'
+            ]]>
+            </Regex>
+          </Expression>
+        </Expressions>
+      </Group>
+      
     </Groups>
   </ExpressionsToBlock>
 
